--- a/EB_Estimate_Pdf.html
+++ b/EB_Estimate_Pdf.html
@@ -63,6 +63,8 @@
                 </table>
             </macro>
         </macrolist>
+                        
+ //hacktoberfest
         <style type="text/css">
             * {
                 <#if .locale=="zh_CN">font-family: NotoSans, NotoSansCJKsc, sans-serif;
